# AStar-Helmke-cpp

./: .gitignore  ChangeLog  THANKS
GuestAircraftMitVectorLogtrace/: AStar.cxx  AStar.h  AStarAcft.cxx  AStarAcft.h  Aircraft.cxx  Aircraft.h  BaseDir.h  CMakeLists.txt  EvalSeqAircraft.cxx  EvalSeqAircraft.h  EvalSequence.cxx  EvalSequence.h  FileInput.cxx  FileInput.h  Guest.cxx  Guest.h  GuestArray.cxx  GuestArray.h  QualityFuncAircraft.cxx  QualityFuncAircraft.h  QualityFuncBase.cxx  QualityFuncBase.h  QualityFuncStatistics.cxx  QualityFuncStatistics.h  TakeSelect.cxx  TakeSelect.h  TakeSelectSearchParam.h  dosFarben.h  main.cxx  testMakros.h  zeitmess.cxx  zeitmess.h
GuestAircraftMitVectorLogtrace/Data/: Aircraft5SameQuali.txt  Aircraft9.txt  Aircraft9Res.txt  Aircraft9SameQuali_2.txt  Gaeste.txt  Gaeste9.txt  Gaeste9Res.txt  GaesteRes.txt  GaesteTest2.txt  dummyAircraft.txt  dummyGuests.txt  results.txt  scheduling.ids  scheduling.trc
GuestAircraftMitVectorLogtrace/Data/WettbewerbAircraft2018/: Aircraft5.txt  Aircraft9.txt
GuestAircraftMitVectorLogtrace/Data/WettbewerbGuests2018/: Gaeste40.txt  Gaeste40Res.txt  Gaeste5Linear.txt
GuestAircraftMitVectorLogtrace/Scheduling/: GuestAStar.cpp  GuestAStar.h  GuestNode.cpp  GuestNode.h  GuestTree.cpp  GuestTree.h  Node.cpp  Node.h  Scheduling.sln  Scheduling.vcxproj  Scheduling.vcxproj.filters
GuestAircraftMitVectorLogtrace/Scheduling/Debug/: vc141.idb
GuestAircraftMitVectorLogtrace/Scheduling/x64/Debug/: astar.obj.enc  (+1 more)
GuestAircraftMitVectorLogtrace/Test/: SearchAircraftTest.cxx  SearchAircraftTest.h  SearchGuestTest.cxx  SearchGuestTest.h  TestAStar.cxx  TestAStar.h  TestAStarAcft.cxx  TestAStarAcft.h  TestAStarAcftWettbewerb.cxx  TestAStarWettbewerb.cxx  TestFileInput.cxx  TestFileInput.h  TestGuestArray.cxx  TestGuestArray.h  TestSequence.cxx  TestSequence.h
GuestAircraftMitVectorLogtrace/logtrace/: config.h  defbool.hpp  define.cpp  define.hpp  idmap.cpp  log.cpp  logstack.cpp  logstream.cpp  logstream.hpp  logtrace.h  ttime.cpp  ttime.hpp
(+12 files in other folders)
